tweaks to ui to fix scrollbar offset issue

--- a/less/layout.less
+++ b/less/layout.less
@@ -29,6 +29,7 @@
 
   .weekly-days {
     padding-left: 10%;
+    padding-right: 15px;
     text-align: center;
 
     &:after {
